--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -19,9 +19,9 @@ body {
 }
 
 .container {
-    margin: 88px 24px;
+    margin: 5.5rem 1.5rem;
 
     @include breakpoint-up(large) {
-        margin: 177px 165px;
+        margin: 11.0625rem 10.3125rem;
     }
 }
