--- a/css/style.css
+++ b/css/style.css
@@ -157,18 +157,18 @@ body {
 }
 
 .container {
-  margin: 88px 24px;
+  margin: 5.5rem 1.5rem;
 }
 
 @media (min-width: 64em) {
   .container {
-    margin: 177px 165px;
+    margin: 11.0625rem 10.3125rem;
   }
 }
 
 .card {
   background-color: #1b1938;
-  max-width: 327px;
+  max-width: 20.4375rem;
   text-align: center;
   border-radius: 8px;
   overflow: hidden;
@@ -179,7 +179,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    max-width: 1110px;
+    max-width: 69.375rem;
     text-align: left;
   }
 }
@@ -187,13 +187,13 @@ body {
 .card__img {
   position: relative;
   background-color: #aa5cdb;
-  min-height: 240px;
-  margin-bottom: 40px;
+  min-height: 15rem;
+  margin-bottom: 2.5rem;
 }
 
 @media (min-width: 64em) {
   .card__img {
-    min-width: 540px;
+    min-width: 33.75rem;
     margin-bottom: 0;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
@@ -218,7 +218,7 @@ body {
 }
 
 .card__info {
-  margin: 40px 32px 32px 32px;
+  margin: 2.5rem 2rem 2rem 2rem;
 }
 
 @media (min-width: 64em) {
@@ -226,15 +226,15 @@ body {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
-    margin: 72px 95px 59px 72px;
+    margin: 4.5rem 5.9375rem 3.6875rem 4.5rem;
   }
 }
 
 .card__headline {
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: 700;
   color: white;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 .card__headline span {
@@ -243,23 +243,23 @@ body {
 
 @media (min-width: 64em) {
   .card__headline {
-    font-size: 36px;
-    margin-bottom: 25px;
-    line-height: 44px;
+    font-size: 2.25rem;
+    margin-bottom: 1.5625rem;
+    line-height: 2.75rem;
   }
 }
 
 .card__text {
   color: rgba(255, 255, 255, 0.75);
-  font-size: 15px;
-  margin-bottom: 40px;
-  line-height: 25px;
+  font-size: 0.9375rem;
+  margin-bottom: 2.5rem;
+  line-height: 1.5625rem;
 }
 
 @media (min-width: 64em) {
   .card__text {
-    margin-bottom: 72px;
-    margin-right: 30px;
+    margin-bottom: 4.5rem;
+    margin-right: 1.875rem;
   }
 }
 
@@ -276,12 +276,12 @@ body {
 }
 
 .card__stat:not(:last-of-type) {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 
 @media (min-width: 64em) {
   .card__stat {
-    margin-right: 61px;
+    margin-right: 3.8125rem;
   }
   .card__stat:not(:last-of-type) {
     margin-bottom: 0;
@@ -289,22 +289,23 @@ body {
 }
 
 .card__statNum {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 1.875rem;
 }
 
 .card__statHeading {
   color: rgba(255, 255, 255, 0.6);
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 400;
-  line-height: 26px;
+  line-height: 1.625rem;
   text-transform: uppercase;
 }
 
 @media (min-width: 64em) {
   .card__statHeading {
     font-family: "Lexend Deca", sans-serif;
+    letter-spacing: 0.0625rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
